tests/ui/auto-traits/typeck-default-trait-impl-constituent-types.stderr
error[E0277]: the trait bound `MyS2: MyTrait` is not satisfied
  --> $DIR/typeck-default-trait-impl-constituent-types.rs:21:18
   |
LL |     is_mytrait::<MyS2>();
   |                  ^^^^ unsatisfied trait bound
   |
help: the trait `MyTrait` is not implemented for `MyS2`
  --> $DIR/typeck-default-trait-impl-constituent-types.rs:10:1
   |
LL | struct MyS2;
   | ^^^^^^^^^^^
note: required by a bound in `is_mytrait`
  --> $DIR/typeck-default-trait-impl-constituent-types.rs:16:18
   |
LL | fn is_mytrait<T: MyTrait>() {}
   |                  ^^^^^^^ required by this bound in `is_mytrait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
